added final models and concurrent alogrithm

--- a/algoritms/pyproject.toml
+++ b/algoritms/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "algoritms"
 version = "0.1.0"
-description = "Add your description here"
+description = "Drone image batch processing alogrithms"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
